# Tarini

./: CMakeLists.txt  CMakeUserPresets.json  DroneVoice.cpp  DroneVoice.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md
Source/: DroneVoice.cpp  DroneVoice.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Tarini.jucer
